--- a/software.html
+++ b/software.html
@@ -39,12 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/VentureMedia/743999698621658-software-developer'>Venture Media  Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRBWafwi&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=nEggqMwR'>NICE Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/discord/jobs/4501928002'>Job Application for Senior Software Engineer - Full-stack (Data Products) at Discord</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://spoud.join.com/jobs/474322-software-engineer-100'>Job @ SPOUD (Bern): Software Engineer (100%) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
+<h5><a href='https://jobs.smartrecruiters.com/VentureMedia/743999698621658-software-developer'>Venture Media  Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Toronto, ON, Canada</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://fairtiq.applytojob.com/apply/AlxezwMsCM/Senior-Software-Engineer-Backend-Lisbon'>Senior Software Engineer - Back-end (Lisbon) - FAIRTIQ AG - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Lisbon Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://optelgroup.applytojob.com/apply/78Yn8BGSgg/MidLevel-Software-Engineer'>Mid-Level Software Engineer - Optel Group - Career Page</a></h5> 
@@ -153,7 +165,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/westwing-home-and-living/job/oPlobfwt'>Westwing Careers - Senior Software Engineer - Node.js (m/f/d)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/westwing-home-and-living/job/oPlobfwt'>Westwing Careers - Senior Software Engineer - Node.js (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -165,7 +177,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4373314002'>Job Application for Senior Software Engineer in Test at Unite Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4373314002'>Job Application for Senior Software Engineer in Test at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -365,7 +377,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-3924'>Associate Software Engineer - Genesys Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-3924'>Associate Software Engineer - Genesys Careers</a></h5> 
 <p><span class="badge badge-light">Galway Galway</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -377,7 +389,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999698592709-software-engineer-streaming-data-platform'>Pluralsight Software Engineer - Streaming Data Platform | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999698592709-software-engineer-streaming-data-platform'>Pluralsight Software Engineer - Streaming Data Platform | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -417,7 +429,7 @@
 <p><span class="badge badge-light">Krak?w Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378309-software-engineer'>zooplus Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378309-software-engineer'>zooplus Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w Munich</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -425,21 +437,9 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/argo/jobs/1939808'>Job Application for Lead Software Engineer, Plant Software at Argo AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/argo/jobs/1939808'>Job Application for Lead Software Engineer, Plant Software at Argo AI</a></h5> 
 <p><span class="badge badge-light">Detroit Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698585431-senior-backend-software-developer-c-m-f-'>Playtech Senior Backend Software Developer C# (m/f) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Wien, Austria  Vienna London Malm?</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxOEV8BGBoXxHBWNbvIBk@z8-&embedsource=CareerSite'>Sr. Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://olo.applytojob.com/apply/XNOlNGrSwN/Senior-Software-Engineer-In-Test'>Senior Software Engineer in Test - Olo - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
